--- a/utils/get-npm-info/package.json
+++ b/utils/get-npm-info/package.json
@@ -30,5 +30,6 @@
     "axios": "^0.27.2",
     "semver": "^7.3.7",
     "url-join": "^4.0.1"
-  }
+  },
+  "gitHead": "d587af2442ca3c25e40c9e9f6e653e166a9a5d1e"
 }
