--- a/core/cli/package.json
+++ b/core/cli/package.json
@@ -20,10 +20,10 @@
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
   "dependencies": {
-    "@ohh-cli/exec": "file:../exec",
-    "@ohh-cli/get-npm-info": "file:../../utils/get-npm-info",
-    "@ohh-cli/init": "file:../../commands/init",
-    "@ohh-cli/log": "file:../../utils/log",
+    "@ohh-cli/exec": "^0.0.3",
+    "@ohh-cli/get-npm-info": "^0.0.3",
+    "@ohh-cli/init": "^0.0.3",
+    "@ohh-cli/log": "^0.0.3",
     "colors": "^1.4.0",
     "commander": "^9.4.0",
     "dotenv": "^16.0.1",
@@ -37,5 +37,5 @@
   "publishConfig": {
     "access": "public"
   },
-  "gitHead": "231a088230b9618eeb159ee537d143e3d2773f7a"
+  "gitHead": "d587af2442ca3c25e40c9e9f6e653e166a9a5d1e"
 }
