--- a/utils/format-path/package.json
+++ b/utils/format-path/package.json
@@ -25,5 +25,6 @@
   },
   "bugs": {
     "url": "https://github.com/speak44/ohh-cli/issues"
-  }
+  },
+  "gitHead": "d587af2442ca3c25e40c9e9f6e653e166a9a5d1e"
 }
