--- a/commands/init/package.json
+++ b/commands/init/package.json
@@ -16,9 +16,9 @@
   "dependencies": {
     "@ohh-cli/command": "file:../../models/command",
     "@ohh-cli/log": "^0.1.0",
-    "@ohh-cli/package": "file:../../models/package",
+    "@ohh-cli/package": "^0.1.0",
     "@ohh-cli/request": "^0.1.0",
-    "@ohh-cli/utils": "file:../../utils/utils",
+    "@ohh-cli/utils": "^0.1.0",
     "fs-extra": "^10.1.0",
     "inquirer": "^8.2.4",
     "kebab-case": "^1.0.1",
@@ -38,5 +38,5 @@
   "bugs": {
     "url": "https://github.com/speak44/ohh-cli/issues"
   },
-  "gitHead": "108648df506d92d85edde9cef305d911dc8a5a88"
+  "gitHead": "29370eec45d78e9fe40424b11cf4ff6f58bffebb"
 }
