--- a/commands/init/package.json
+++ b/commands/init/package.json
@@ -19,7 +19,9 @@
     "@ohh-cli/package": "^0.1.0",
     "@ohh-cli/request": "^0.1.0",
     "@ohh-cli/utils": "^0.1.0",
+    "ejs": "^3.1.8",
     "fs-extra": "^10.1.0",
+    "glob": "^8.0.3",
     "inquirer": "^8.2.4",
     "kebab-case": "^1.0.1",
     "semver": "^7.3.7",
