--- a/commands/init/package.json
+++ b/commands/init/package.json
@@ -14,7 +14,7 @@
     "lib"
   ],
   "dependencies": {
-    "@ohh-cli/command": "file:../../models/command",
+    "@ohh-cli/command": "^1.0.0",
     "@ohh-cli/log": "^1.0.0",
     "@ohh-cli/package": "^1.0.0",
     "@ohh-cli/request": "^1.0.0",
@@ -40,5 +40,5 @@
   "bugs": {
     "url": "https://github.com/speak44/ohh-cli/issues"
   },
-  "gitHead": "29370eec45d78e9fe40424b11cf4ff6f58bffebb"
+  "gitHead": "9919301c1a0f3da8d7e1af44a6f228d3827035bc"
 }
